--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <title>Alessio Burgio</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="cloud-project/css/styles.css">
         <link rel="icon" href="favicon.ico">
         <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento&display=swap" rel="stylesheet">
     </head>
