--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="middle-container">
             <div class="profile">
-                <img src="images/alessio.jpg" alt="photo of myself" class="image">
+                <img src="Images/alessio.jpg" alt="photo of myself" class="image">
                 <div class="middle">
                     <div class="text">Check My Portfolio</div>
                   </div>
@@ -34,14 +34,14 @@
             <div class="skills">
                 <h2>My Skills</h2>
                 <div class="skill-row">
-                    <img class="html5-img" src="images/html5.png" alt="html5 icon">
-                    <img class="css3-img" src="images/css3.png" alt="css3 icon">
-                    <img class="bootstrap-img" src="images/bootstrap.png" alt="bootstrap icon">
+                    <img class="html5-img" src="Images/html5.png" alt="html5 icon">
+                    <img class="css3-img" src="Images/css3.png" alt="css3 icon">
+                    <img class="bootstrap-img" src="Images/bootstrap.png" alt="bootstrap icon">
                     <h3>Design | Development</h3>
                     <p>I have started in 2019 and learnt HTML, CSS and Bootstrap.</p>
                 </div>
                 <div class="skill-row-lower">
-                    <img class="coffee-img" src="images/coffeetogo.png" alt="coffee to go icon">
+                    <img class="coffee-img" src="Images/coffeetogo.png" alt="coffee to go icon">
                     <h3>Soft Skills</h3>
                     <p>I am a relaxed and sociable character who enjoys a chat in front of a warm frothy cup of latte.</p>
                 </div>
